--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .container {
+        @apply flex flex-col justify-center items-center text-center
+    }
+
+    .btn {
+        @apply mt-2 mb-2 px-3 py-1 border border-black rounded-lg font-bold ms-3 hover:text-white;
+    }
+}
