--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,8 @@
     .btn {
         @apply mt-2 mb-2 px-3 py-1 border border-black rounded-lg font-bold ms-3 hover:text-white;
     }
+
+    .Container-loop {
+        @apply flex flex-wrap justify-center items-center;
+    }
 }
